# CTAyyy

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: cta_library.json  cta_library_discovered.json  social_promotions.json  trail_library.json
data/classified/: 10-things-i-learned-about-advanced-customer-segmentation.json  3-lessons-from-using-data-cloud.json  3-perfect-platform-days-at-dreamforce.json  4-lessons-implementing-zero-copy-data360.json  4th-state-of-it-security.json  5-lessons-from-our-women-in-tech-summit.json  5-lessons-salesforce-agentic-enterprise.json  5-reasons-forward-deployed-engineers-choose-salesforce.json  5-reasons-to-attend-the-dreamforce-it-keynote.json  5-step-guide-to-trusted-ai.json  6-key-takeaways-from-salesforces-trailblazing-women-london.json  6-ux-design-tips-trust-ai.json  6-ways-to-be-green-and-well-at-home.json  7-ways-to-incorporate-video-into-your-marketing-campaign.json  8-ways-small-businesses-can-improve-customer-service.json  ?bc=DB.json  a-glimpse-into-our-futureforce-grads-and-interns.json  a-quick-introduction-to-dropshipping.json  a-quick-introduction-to-user-experience-ux.json  a-real-world-agentforce-lens-on-the-well-architected-framework-pillars.json  a-round-trip-career-in-customer-success-at-salesforce.json  account-engagement-plus-capabilities.json  account-executive.json  (+558 more)
scripts/: analyze.py  build_cta_library.py  classify_rules.py  crawl.py  crawl_competitor.py  crawl_from_sitemap.py  fetch_sitemap_urls.py  fetch_trails.py  run_all.py
(+1135 files in other folders)
